# BitTorrent

./: .gitignore  AGENTS.md  README.md  go.mod  go.sum
backend/: .gitignore  Cargo.toml  build.rs
backend/proto/: dht.proto
backend/src/: lib.rs  main.rs  session.rs
backend/src/core/: bencode.rs  bitfield.rs  error.rs  metainfo.rs  mod.rs  net_util.rs  types.rs
backend/src/dht/: client.rs
backend/src/peer/: connection.rs  connection_manager.rs  event_loop.rs  handshake.rs  manager.rs  message.rs  mod.rs
backend/src/storage/: assembler.rs  mod.rs  piece_store.rs
backend/tests/: assembler_test.rs  bencode_test.rs  bitfield_test.rs  connection_manager_test.rs  connection_test.rs  dht_integration_test.rs  event_loop_test.rs  handshake_test.rs  manager_test.rs  message_test.rs  metainfo_test.rs  net_util_test.rs  piece_store_test.rs  seed_test.rs  session_test.rs  storage_test.rs  types_test.rs
backend/tests/common/: mod.rs
bridge/: server.go
dht/: main.go  repro_test.go
dht/bridge/: server_test.go
dht/kademlia/: ops.go
dht/node/: interface.go
dht/proto/: dht.pb.go  dht_grpc.pb.go
docs/: cross-machine-deployment.md  dht-grpc-api-guide.md
kademlia/: kademlia.go  ops.go  rpc.go
node/: peer_test.go
scripts/cross-machine/: cleanup.sh  cross-machine-test-plan.md  machine_a_seed.sh  machine_b_leech.sh  setup.sh  test_all.sh  verify.sh
